objects/POC_Request__c/POC_Request__c.object-meta.xml
<CustomObject>
    <description>Custom Object to request and trigger POC process</description>
    <label>POC Request</label>
    <nameField>
        <label>POC Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>POC Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>