objects/POC_Request__c/fields/Account_Owner_1__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account  TAM Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>POC_Requests_Account_owner</relationshipName>
    <type>Lookup</type>
</CustomField>