objects/POC_Request__c/fields/Account_POD_Leader__c.field-meta.xml
<CustomField>
    <fullName>Account_POD_Leader__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This field is updated from the TAM Account Owner field on the related account and used in the approval process. If blank, update the TAM Account Owner field on the account and edit/save the POC request to populate the field here</inlineHelpText>
    <label>Account POD Leader</label>
    <referenceTo>User</referenceTo>
    <relationshipName>POC_Requests1_POD</relationshipName>
    <type>Lookup</type>
</CustomField>