objects/POC_Request__c/fields/Account_RVP__c.field-meta.xml
<CustomField>
    <fullName>Account_RVP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account RVP</label>
    <referenceTo>User</referenceTo>
    <relationshipName>POC_Requests_RVP</relationshipName>
    <type>Lookup</type>
</CustomField>