objects/POC_Request__c/fields/Account_VP__c.field-meta.xml
<CustomField>
    <fullName>Account_VP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Populated by Process Builder POC Approvers update. When Account has a TAM Owner then it will populate with the Opportunity Area VP. When Account does not have a TAM Owner then it will populate with the Account Area VP.</description>
    <label>Account VP</label>
    <referenceTo>User</referenceTo>
    <relationshipName>POC_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>