objects/POC_Request__c/fields/Additional_Comments_if_required__c.field-meta.xml
<CustomField>
    <fullName>Additional_Comments_if_required__c</fullName>
    <label>Additional Comments if required</label>
    <type>TextArea</type>
</CustomField>