objects/POC_Request__c/fields/Allow_Unsigned_Content__c.field-meta.xml
<CustomField>
    <fullName>Allow_Unsigned_Content__c</fullName>
    <description>Used in Licensing email template and populated through the licensing tool, after the Licensing Event. Not on Page Layout.</description>
    <label>Allow Unsigned Content</label>
    <length>50</length>
    <type>Text</type>
</CustomField>