objects/POC_Request__c/fields/Appliance_Delivery_Questionnaire_Status__c.field-meta.xml
<CustomField>
    <fullName>Appliance_Delivery_Questionnaire_Status__c</fullName>
    <label>Appliance Delivery Questionnaire Status</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>