objects/POC_Request__c/fields/Approval_Stage__c.field-meta.xml
<CustomField>
    <fullName>Approval_Stage__c</fullName>
    <label>Approval Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Request needs to be submitted for approval</fullName>
                <default>true</default>
                <label>Request needs to be submitted for approval</label>
            </value>
            <value>
                <fullName>Awaiting for Approval</fullName>
                <label>Pending Approval</label>
            </value>
            <value>
                <fullName>Fully Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Missing Info</fullName>
                <isActive>false</isActive>
                <label>Missing Info</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>