objects/POC_Request__c/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Asset</label>
    <type>Checkbox</type>
</CustomField>