objects/POC_Request__c/fields/Asset_SBOM__c.field-meta.xml
<CustomField>
    <fullName>Asset_SBOM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SBOM</label>
    <type>Checkbox</type>
</CustomField>