objects/POC_Request__c/fields/Certificate_Manager__c.field-meta.xml
<CustomField>
    <fullName>Certificate_Manager__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Certificate Manager</label>
    <type>Checkbox</type>
</CustomField>