objects/POC_Request__c/fields/Chronicle__c.field-meta.xml
<CustomField>
    <fullName>Chronicle__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Chronicle</label>
    <type>Checkbox</type>
</CustomField>