objects/POC_Request__c/fields/Closed_Date_POC_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Closed_Date_POC_End_Date__c</fullName>
    <formula>Opportunity__r.CloseDate - End_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Closed Date - POC End Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>