objects/POC_Request__c/fields/Cloud_Cloud_Provider__c.field-meta.xml
<CustomField>
    <fullName>Cloud_Cloud_Provider__c</fullName>
    <label>Cloud - Cloud Provider</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Amazon</fullName>
            </value>
            <value>
                <fullName>AWS</fullName>
            </value>
            <value>
                <fullName>Google Cloud Platform</fullName>
            </value>
            <value>
                <fullName>Microsoft Azure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>