objects/POC_Request__c/fields/Cloud_Region__c.field-meta.xml
<CustomField>
    <fullName>Cloud_Region__c</fullName>
    <description>Formula to populate the Cloud Region from the Server Deployment</description>
    <formula>TEXT(Server_Deployment__r.Cloud_Region__c)</formula>
    <label>Cloud Region</label>
    <type>Text</type>
</CustomField>