objects/POC_Request__c/fields/Comply__c.field-meta.xml
<CustomField>
    <fullName>Comply__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Comply</label>
    <type>Checkbox</type>
</CustomField>