objects/POC_Request__c/fields/Contact_of_Partner_SE_Leading__c.field-meta.xml
<CustomField>
    <fullName>Contact_of_Partner_SE_Leading__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Partner Contact who is leading POC</description>
    <inlineHelpText>Partner Contact who is leading POC</inlineHelpText>
    <label>Contact of Partner SE Leading</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>POC Requests (Contact of Partner SE Leading)</relationshipLabel>
    <relationshipName>POC_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>