objects/POC_Request__c/fields/Contact_of_Partner_SE_Shadowing__c.field-meta.xml
<CustomField>
    <fullName>Contact_of_Partner_SE_Shadowing__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Partner Contact who is shadowing POC</description>
    <inlineHelpText>Partner Contact who is shadowing POC</inlineHelpText>
    <label>Contact of Partner SE Shadowing</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>POC Requests (Contact of Partner SE Shadowing)</relationshipLabel>
    <relationshipName>POC_Requests2</relationshipName>
    <type>Lookup</type>
</CustomField>