objects/POC_Request__c/fields/Contract_Owner__c.field-meta.xml
<CustomField>
    <fullName>Contract_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract Owner - Tanium</label>
    <referenceTo>User</referenceTo>
    <relationshipName>POC_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>