objects/POC_Request__c/fields/Core__c.field-meta.xml
<CustomField>
    <fullName>Core__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Core</label>
    <type>Checkbox</type>
</CustomField>