objects/POC_Request__c/fields/Core_for_Operational_Technology__c.field-meta.xml
<CustomField>
    <fullName>Core_for_Operational_Technology__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Core for Operational Technology</label>
    <type>Checkbox</type>
</CustomField>