objects/POC_Request__c/fields/Core_Plus__c.field-meta.xml
<CustomField>
    <fullName>Core_Plus__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Core Plus</label>
    <type>Checkbox</type>
</CustomField>