objects/POC_Request__c/fields/Core_Standard__c.field-meta.xml
<CustomField>
    <fullName>Core_Standard__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Core Standard</label>
    <type>Checkbox</type>
</CustomField>