objects/POC_Request__c/fields/Customer_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Customer_Contact_Email__c</fullName>
    <description>Field for use on Chronicle POC Requests to enter a point of contact for Chronicle.</description>
    <inlineHelpText>Chronicle may need to request additional details from the customer, please provide the technical contact</inlineHelpText>
    <label>Chronicle Customer Contact Email</label>
    <type>Email</type>
</CustomField>