objects/POC_Request__c/fields/Customer_Success_Owner__c.field-meta.xml
<CustomField>
    <fullName>Customer_Success_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Populates the Customer Success Owner from Account</description>
    <inlineHelpText>This field is updated from the Customer Success Owner field on the related Account and used in the approval process. If blank, update the Customer Success Owner field on the Account and edit/save the POC request to populate the field here.</inlineHelpText>
    <label>Customer Success Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>POC_RequestsA1Nx</relationshipName>
    <type>Lookup</type>
</CustomField>