objects/POC_Request__c/fields/Customer_Success_RVP__c.field-meta.xml
<CustomField>
    <fullName>Customer_Success_RVP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Populates the Customer Success RVP from Account</description>
    <inlineHelpText>This field is updated from the Customer Success RVP field on the related Account and used in the approval process. If blank, update the Customer Success RVP field on the Account and edit/save the POC request to populate the field here.</inlineHelpText>
    <label>Customer Success RVP</label>
    <referenceTo>User</referenceTo>
    <relationshipName>POC_Requests9skZ</relationshipName>
    <type>Lookup</type>
</CustomField>