objects/POC_Request__c/fields/Deep_Instinct__c.field-meta.xml
<CustomField>
    <fullName>Deep_Instinct__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deep Instinct</label>
    <type>Checkbox</type>
</CustomField>