objects/POC_Request__c/fields/Deploy__c.field-meta.xml
<CustomField>
    <fullName>Deploy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deploy</label>
    <type>Checkbox</type>
</CustomField>