objects/POC_Request__c/fields/Deployment_Method__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Method__c</fullName>
    <description>Designates the Deployment Method for this POC Request, based on the Server Deployment. Jira ticket SS-12115</description>
    <formula>IF(ISBLANK(Server_Deployment__c), NULL, IF(CONTAINS(Server_Deployment__r.RecordType.Name, &apos;Cloud&apos;), &apos;Cloud&apos;, &apos;On-Prem&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Designates the Deployment Method for this POC Request, based on the Server Deployment</inlineHelpText>
    <label>Deployment Method</label>
    <type>Text</type>
</CustomField>