objects/POC_Request__c/fields/Discover__c.field-meta.xml
<CustomField>
    <fullName>Discover__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Discover</label>
    <type>Checkbox</type>
</CustomField>