objects/POC_Request__c/fields/End_Date_Today__c.field-meta.xml
<CustomField>
    <fullName>End_Date_Today__c</fullName>
    <description>Formula to populate True or False if the End Date greater than or equal to Today.</description>
    <formula>End_Date__c &gt;= TODAY()</formula>
    <inlineHelpText>Is the End Date greater than or equal to Today?</inlineHelpText>
    <label>End Date &gt;= Today</label>
    <type>Checkbox</type>
</CustomField>