objects/POC_Request__c/fields/Endpoint_Management_for_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Endpoint_Management_for_Mobile__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Endpoint Management for Mobile</label>
    <type>Checkbox</type>
</CustomField>