objects/POC_Request__c/fields/Endpoint_Management_Plus__c.field-meta.xml
<CustomField>
    <fullName>Endpoint_Management_Plus__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Endpoint Management Plus</label>
    <type>Checkbox</type>
</CustomField>