objects/POC_Request__c/fields/Endpoint_Management_Standard__c.field-meta.xml
<CustomField>
    <fullName>Endpoint_Management_Standard__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Endpoint Management Standard</label>
    <type>Checkbox</type>
</CustomField>