objects/POC_Request__c/fields/Enforce__c.field-meta.xml
<CustomField>
    <fullName>Enforce__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enforce</label>
    <type>Checkbox</type>
</CustomField>