objects/POC_Request__c/fields/Enforce_macOS_Device_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Enforce_macOS_Device_Enrollment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enforce macOS Device Enrollment</label>
    <type>Checkbox</type>
</CustomField>