objects/POC_Request__c/fields/Engage__c.field-meta.xml
<CustomField>
    <fullName>Engage__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Engage requires that Performance be selected.</inlineHelpText>
    <label>Engage</label>
    <type>Checkbox</type>
</CustomField>