objects/POC_Request__c/fields/Exposure_Management_for_Operational_Tech__c.field-meta.xml
<CustomField>
    <fullName>Exposure_Management_for_Operational_Tech__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exposure Management for Operational Tech</label>
    <type>Checkbox</type>
</CustomField>