objects/POC_Request__c/fields/Incident_Response__c.field-meta.xml
<CustomField>
    <fullName>Incident_Response__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Incident Response</label>
    <type>Checkbox</type>
</CustomField>