objects/POC_Request__c/fields/Integrity_Monitor__c.field-meta.xml
<CustomField>
    <fullName>Integrity_Monitor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Integrity Monitor</label>
    <type>Checkbox</type>
</CustomField>