objects/POC_Request__c/fields/Investigate__c.field-meta.xml
<CustomField>
    <fullName>Investigate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Investigate</label>
    <type>Checkbox</type>
</CustomField>