objects/POC_Request__c/fields/IOCD__c.field-meta.xml
<CustomField>
    <fullName>IOCD__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Detect</label>
    <type>Checkbox</type>
</CustomField>