objects/POC_Request__c/fields/Is_this_a_Partner_led_assessment__c.field-meta.xml
<CustomField>
    <fullName>Is_this_a_Partner_led_assessment__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If the partner will be leading the assessment check the box</inlineHelpText>
    <label>Is this a Partner led assessment?</label>
    <type>Checkbox</type>
</CustomField>