objects/POC_Request__c/fields/License_Delivered__c.field-meta.xml
<CustomField>
    <fullName>License_Delivered__c</fullName>
    <description>This field is to be added only on On-Prem &amp; TaaS page layouts. And has access to only Deal Desk Profile. The purpose of this field is to know when the license has been delivered, as the license will be created but the delivery date might be in the future. To keep track of that licenses this field has been created.</description>
    <label>License Delivered</label>
    <type>Date</type>
</CustomField>