objects/POC_Request__c/fields/License_Generated_By__c.field-meta.xml
<CustomField>
    <fullName>License_Generated_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>License Generated By</description>
    <label>License Generated By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>POC_Requests9</relationshipName>
    <type>Lookup</type>
</CustomField>