objects/POC_Request__c/fields/License_Integration_Error__c.field-meta.xml
<CustomField>
    <fullName>License_Integration_Error__c</fullName>
    <description>Used to display the error message received when a error in the licensing tool occurs</description>
    <inlineHelpText>Used to display the error message received when a error in the licensing tool occurs</inlineHelpText>
    <label>License Integration Error</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>