objects/POC_Request__c/fields/License_Link__c.field-meta.xml
<CustomField>
    <fullName>License_Link__c</fullName>
    <description>07.15.25 - Updated base URL and added NULL value check for Reference License ID #. Jira ticket SS-11333</description>
    <formula>IF(ISBLANK(Reference_License_ID__c), NULL, &apos;https://licensing.prd.taniumcloud.com/#/licenses/&apos; &amp; Reference_License_ID__c)</formula>
    <label>License Link</label>
    <type>Text</type>
</CustomField>