objects/POC_Request__c/fields/License_Type__c.field-meta.xml
<CustomField>
    <fullName>License_Type__c</fullName>
    <inlineHelpText>-Production: intended for live environment, does not allow unsigned content
-Lab: testing license, includes labs content and allows unsigned content
-QA: testing license that mirrors prod, no labs content and no unsigned content, Limited use</inlineHelpText>
    <label>License Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Tanium_Infrastructure__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Production</fullName>
            </value>
            <value>
                <fullName>Lab</fullName>
                <default>true</default>
                <label>Lab</label>
            </value>
            <value>
                <fullName>QA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>