objects/POC_Request__c/fields/License_Version_6_5_or_7_x__c.field-meta.xml
<CustomField>
    <fullName>License_Version_6_5_or_7_x__c</fullName>
    <label>Tanium Platform Version</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>6.5</fullName>
            </value>
            <value>
                <fullName>7.0</fullName>
            </value>
            <value>
                <fullName>7.1</fullName>
            </value>
            <value>
                <fullName>7.2</fullName>
            </value>
            <value>
                <fullName>7.3</fullName>
            </value>
            <value>
                <fullName>7.4</fullName>
            </value>
            <value>
                <fullName>7.4.6+</fullName>
            </value>
            <value>
                <fullName>7.x</fullName>
                <isActive>false</isActive>
                <label>7.x</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>