objects/POC_Request__c/fields/Licensed_Modules__c.field-meta.xml
<CustomField>
    <fullName>Licensed_Modules__c</fullName>
    <description>Modules provisioned for this POC.</description>
    <inlineHelpText>Modules provisioned for this POC.</inlineHelpText>
    <label>Licensed Modules</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>