objects/POC_Request__c/fields/Live_Lab_Environment__c.field-meta.xml
<CustomField>
    <fullName>Live_Lab_Environment__c</fullName>
    <description>Picklist for the type of environment the POC will be in.</description>
    <inlineHelpText>Shared Environment- Collaborative workspace (one log in - preferred for POC testing)
Individual Environment - Each has separate view and interactions do not affect other users/testing

Environment - Picklist</inlineHelpText>
    <label>Live Lab Environment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Shared Environment</fullName>
            </value>
            <value>
                <fullName>Individual Environment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>