objects/POC_Request__c/fields/Map__c.field-meta.xml
<CustomField>
    <fullName>Map__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Map</label>
    <type>Checkbox</type>
</CustomField>