objects/POC_Request__c/fields/Modules_Linked_Manually__c.field-meta.xml
<CustomField>
    <fullName>Modules_Linked_Manually__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field set to true through the POC Request - Link Modules flow when POC Modules are created through the button.</description>
    <label>Modules Linked Manually</label>
    <type>Checkbox</type>
</CustomField>