objects/POC_Request__c/fields/Non_Revenue_Unqualified__c.field-meta.xml
<CustomField>
    <fullName>Non_Revenue_Unqualified__c</fullName>
    <defaultValue>&quot;Not Applicable (Revenue/Qualified POC)&quot;</defaultValue>
    <description>Specify reason why POC is unqualified otherwise specify Not Applicable (Revenue/Qualified POC).</description>
    <inlineHelpText>Specify reason why POC is unqualified otherwise specify Not Applicable (Revenue/Qualified POC).</inlineHelpText>
    <label>Non-Revenue / Unqualified</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Assessment</fullName>
            </value>
            <value>
                <fullName>Concession</fullName>
            </value>
            <value>
                <fullName>Churn Mitigation</fullName>
            </value>
            <value>
                <fullName>Lab</fullName>
            </value>
            <value>
                <fullName>Promotion</fullName>
            </value>
            <value>
                <fullName>Showcase (No POC Plan - Customer Eval)</fullName>
            </value>
            <value>
                <fullName>Not Applicable (Revenue/Qualified POC)</fullName>
                <default>true</default>
                <label>Not Applicable (Revenue/Qualified POC)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>