objects/POC_Request__c/fields/Number_of_Entitled_Endpoints__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Entitled_Endpoints__c</fullName>
    <inlineHelpText>Total number of production seats purchased based on the current active contract. Only required when the POC request is for subset of entitled endpoints</inlineHelpText>
    <label>Number of Entitled Endpoints</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>