objects/POC_Request__c/fields/Opportunity_License_Type__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_License_Type__c</fullName>
    <description>Opportunity License Type populated on the POC Request via Formula</description>
    <formula>TEXT(Opportunity__r.Business_Motion__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TBD - Opportunity License Type</label>
    <type>Text</type>
</CustomField>