objects/POC_Request__c/fields/Opportunity_Stage__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Stage__c</fullName>
    <description>SS-13637 - Updated the stagenumber values.
This field is used in POC approval Process</description>
    <formula>IF(ISPICKVAL(Opportunity__r.StageName, &quot;Failed Renewal&quot;), TRUE,
IF(Opportunity__r.StageNumber__c = 190, TRUE, False))</formula>
    <inlineHelpText>This field is used in POC approval Process</inlineHelpText>
    <label>Opportunity Stage</label>
    <type>Checkbox</type>
</CustomField>