objects/POC_Request__c/fields/Oppty_Successfactors_Status__c.field-meta.xml
<CustomField>
    <fullName>Oppty_Successfactors_Status__c</fullName>
    <description>Formula field to verify if Funding, POC Plan &amp; Executive Sponsor identified in Opportunity</description>
    <formula>AND(Opportunity__r.Funding_Approval__c , Opportunity__r.POC_plan_agreed_TAM__c)</formula>
    <inlineHelpText>Formula field to verify if Funding, POC Plan &amp; Executive Sponsor identified in Opportunity</inlineHelpText>
    <label>Oppty Successfactors Status</label>
    <type>Checkbox</type>
</CustomField>