objects/POC_Request__c/fields/Order_Ops_Comments__c.field-meta.xml
<CustomField>
    <fullName>Order_Ops_Comments__c</fullName>
    <inlineHelpText>Comments - Order Ops team</inlineHelpText>
    <label>Order Ops Comments</label>
    <type>TextArea</type>
</CustomField>