objects/POC_Request__c/fields/Patch__c.field-meta.xml
<CustomField>
    <fullName>Patch__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Patch</label>
    <type>Checkbox</type>
</CustomField>