objects/POC_Request__c/fields/Performance__c.field-meta.xml
<CustomField>
    <fullName>Performance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Performance</label>
    <type>Checkbox</type>
</CustomField>