objects/POC_Request__c/fields/POC_End_point_percent__c.field-meta.xml
<CustomField>
    <fullName>POC_End_point_percent__c</fullName>
    <formula>Quantity__c / Opportunity__r.seats__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>POC End point %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>