objects/POC_Request__c/fields/POC_Led_By__c.field-meta.xml
<CustomField>
    <fullName>POC_Led_By__c</fullName>
    <defaultValue>&quot;Tanium&quot;</defaultValue>
    <description>Select who POC is led by</description>
    <inlineHelpText>Select who POC is led by</inlineHelpText>
    <label>POC Led By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tanium</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>