objects/POC_Request__c/fields/POC_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>POC_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>POC Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>POC Requests (POC Opportunity)</relationshipLabel>
    <relationshipName>POC_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>