objects/POC_Request__c/fields/POC_Owner_Check__c.field-meta.xml
<CustomField>
    <fullName>POC_Owner_Check__c</fullName>
    <formula>IF(CONTAINS(CreatedBy.Profile.Name ,&quot;TAM&quot;),True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>POC Owner Check</label>
    <type>Checkbox</type>
</CustomField>